--- a/src/main/resources/templates/admin/admin_main.html
+++ b/src/main/resources/templates/admin/admin_main.html
@@ -95,13 +95,21 @@
                 </div>
             </div>
         </div>
+        <div class="container-fluid pt-4 px-4">
+            <div class="bg-secondary rounded-top p-4">
+                <div class="row">
+                    <div class="col-12 col-sm-6 text-center text-sm-start">
+                        &copy; <a href="/admin_main">SecurityFirst CTF</a>
+                        <p>Developer<br/>18김대한(gorhfqhk@gmail.com) <br/>18임효근(allen15590@naver.com)</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Recent Sales End -->
     </div>
-    <!-- Content End -->
 
 
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+
 </div>
 
 <!-- JavaScript Libraries -->
