--- a/src/main/resources/templates/admin/admin_quiz_edit.html
+++ b/src/main/resources/templates/admin/admin_quiz_edit.html
@@ -69,9 +69,9 @@
         </div>
         <div class="form-floating mb-3">
           <select class="form-select" id="level">
-            <option th:if="${quiz.level == 0}" value="LOW">LOW</option>
-            <option th:if="${quiz.level == 1}" value="MIDDLE">MIDDLE</option>
-            <option th:if="${quiz.level == 2}" value="HIGH">HIGH</option>
+            <option th:if="${quiz.level == 0}" value="0">LOW</option>
+            <option th:if="${quiz.level == 1}" value="1">MIDDLE</option>
+            <option th:if="${quiz.level == 2}" value="2">HIGH</option>
           </select>
           <label for="level">Level</label>
         </div>
