--- a/src/main/resources/templates/admin/admin_user_detail.html
+++ b/src/main/resources/templates/admin/admin_user_detail.html
@@ -54,7 +54,7 @@
       <div class="bg-secondary rounded p-4" style="width: 90%; height: 87%; margin-top: 3%;">
         <h6 class="mb-4">User Detail Edit Page</h6>
         <div class="form-floating mb-3">
-          <input type="text" class="form-control" id="userId" th:value="${user.userId}">
+          <input style="background: black;" type="text" class="form-control" id="userId" th:value="${user.userId}" readonly>
           <label for="userId">User ID</label>
         </div>
         <div class="form-floating mb-3">
