--- a/src/main/resources/templates/quiz/quiz_main.html
+++ b/src/main/resources/templates/quiz/quiz_main.html
@@ -14,7 +14,8 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@500;700&display=swap"
+          rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" rel="stylesheet">
@@ -22,7 +23,7 @@
 
     <!-- Libraries Stylesheet -->
     <link th:href="@{/css/owl.carousel.min.css}" rel="stylesheet">
-    <link th:href="@{/css/tempusdominus-bootstrap-4.min.css}" rel="stylesheet" />
+    <link th:href="@{/css/tempusdominus-bootstrap-4.min.css}" rel="stylesheet"/>
 
     <!-- Customized Bootstrap Stylesheet -->
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
@@ -32,23 +33,23 @@
     <link th:href="@{/css/quiz/style.css}" rel="stylesheet">
 </head>
 
-<body>
+<body style="height: auto">
 <!-- Navbar -->
 <div class="layout-nav">
     <nav th:replace="nav :: nav"></nav>
 </div>
-<div class="content container-fluid position-relative d-flex p-0">
+<div class="content " style="height:100%">
 
-    <div style="display: flex; justify-content: center; width: 100%; height: 100%">
-        <div class ="challenge  rounded px-4 py-0" >
+    <div style="display: flex; justify-content: center;width: 100%; height:100%">
+        <div class="challenge  rounded px-4 py-0">
             <!--      style="width: 90%; height: 80%; margin-top: 6%;"-->
             <div class="content-in-challenge">
-            <!-- REVERSING -->
-                <h3 style="font-size: 1.5em;" class="category-title" >REVERSING</h3>
+                <!-- REVERSING -->
+                <h3 style="font-size: 1.5em;" class="category-title">REVERSING</h3>
                 <div class="category-container">
                     <div class="one-quiz-block" th:each="quiz:${REVERSING}" th:data-quiz-id="${quiz.quizId}"
                          onClick="showPopup(this.getAttribute('data-quiz-id'))">
-                    <div class="title" th:text="${quiz.quizName}"></div>
+                        <div class="title" th:text="${quiz.quizName}"></div>
                         <div class="level" th:if="${quiz.level == 0}">Low</div>
                         <div class="level" th:if="${quiz.level == 1}">Middle</div>
                         <div class="level" th:if="${quiz.level == 2}">High</div>
@@ -56,7 +57,7 @@
                     </div>
                 </div>
                 <!-- PWN -->
-                <h3 style="font-size: 1.5em;" class="category-title" >PWN</h3>
+                <h3 style="font-size: 1.5em;" class="category-title">PWN</h3>
                 <div class="category-container">
                     <div class="one-quiz-block" th:each="quiz:${PWN}" th:data-quiz-id="${quiz.quizId}"
                          onClick="showPopup(this.getAttribute('data-quiz-id'))">
@@ -68,7 +69,7 @@
                     </div>
                 </div>
                 <!-- WEB -->
-                <h3 style="font-size: 1.5em;" class="category-title" >WEB</h3>
+                <h3 style="font-size: 1.5em;" class="category-title">WEB</h3>
                 <div class="category-container">
                     <div class="one-quiz-block" th:each="quiz:${WEB}" th:data-quiz-id="${quiz.quizId}"
                          onClick="showPopup(this.getAttribute('data-quiz-id'))">
@@ -80,7 +81,7 @@
                     </div>
                 </div>
                 <!-- FORENSICS -->
-                <h3 style="font-size: 1.5em;" class="category-title" >FORENSICS</h3>
+                <h3 style="font-size: 1.5em;" class="category-title">FORENSICS</h3>
                 <div class="category-container">
                     <div class="one-quiz-block" th:each="quiz:${FORENSICS}" th:data-quiz-id="${quiz.quizId}"
                          onClick="showPopup(this.getAttribute('data-quiz-id'))">
@@ -92,7 +93,7 @@
                     </div>
                 </div>
                 <!-- MISC -->
-                <h3 style="font-size: 1.5em;" class="category-title" >MISC</h3>
+                <h3 style="font-size: 1.5em;" class="category-title">MISC</h3>
                 <div class="category-container">
                     <div class="one-quiz-block" th:each="quiz:${MISC}" th:data-quiz-id="${quiz.quizId}"
                          onClick="showPopup(this.getAttribute('data-quiz-id'))">
@@ -103,49 +104,19 @@
                         <div class="writer" th:text="${quiz.quizWriter.nickName}"></div>
                     </div>
                 </div>
-                <!-- CRYPTO -->
-                <h3 style="font-size: 1.5em;" class="category-title" >CRYPTO</h3>
-                <div class="category-container">
-                    <div class="one-quiz-block" th:each="quiz:${CRYPTO}" th:data-quiz-id="${quiz.quizId}"
-                         onClick="showPopup(this.getAttribute('data-quiz-id'))">
-                        <div class="title" th:text="${quiz.quizName}"></div>
-                        <div class="level" th:if="${quiz.level == 0}">Low</div>
-                        <div class="level" th:if="${quiz.level == 1}">Middle</div>
-                        <div class="level" th:if="${quiz.level == 2}">High</div>
-                        <div class="writer" th:text="${quiz.quizWriter.nickName}"></div>
-                    </div>
-                </div>
                 <!-- Dimmed background -->
-                <div id="dimmed-bg" style="display: none; position: fixed;  width:100%; height:100%; top:0; left:0; background-color:black; opacity:0.7;" ></div>
+                <div id="dimmed-bg"
+                     style="display: none; position: fixed;  width:100%; height:100%; top:0; left:0; background-color:black; opacity:0.7;"></div>
 
                 <!-- Popup window -->
-                <div id="popup" style="display:none;width:auto;height:auto;top:50%;left:50%;transform:translate(-50%, -50%);background-color:white;position:fixed;" >
-                    <!--            <h5 th:text="${quizzes.listIterator()}">Challenge Name</h5>-->
-                    <!--            <div class="form-floating mb-3 chbox">-->
-                    <!--                <div th:text="${quiz.quizWriter}"></div>-->
-                    <!--            </div>-->
-                    <!--            <div class="form-floating mb-3 chbox" >-->
-                    <!--                <td th:if="${quiz.level == 0}">Low</td>-->
-                    <!--                <td th:if="${quiz.level == 1}">Middle</td>-->
-                    <!--                <td th:if="${quiz.level == 2}">High</td>-->
-                    <!--            </div>-->
-
-                    <!--            <div class="form-floating">-->
-                    <!--                                <textarea class="form-control" placeholder="Leave a comment here"-->
-                    <!--                                          id="floatingTextarea" style="height: 150px;"></textarea>-->
-                    <!--                <label for="floatingTextarea">Description</label>-->
-                    <!--            </div>-->
+                <div id="popup"
+                     style="display:none;width:auto;height:auto;top:50%;left:50%;transform:translate(-50%, -50%);background-color:white;position:fixed;">
                 </div>
 
             </div>
         </div>
     </div>
 
-    <!-- Content End -->
-
-
-    <!-- Back to Top -->
-    <!--  <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>-->
 </div>
 
 <!-- JavaScript Libraries -->
