--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -109,7 +109,7 @@
 
 /*** content-login ***/
 .content-login {
-    background-image: url("../images/login/test2.jpg");
+    background-image: url("../images/login/space.jpg");
     background-repeat: no-repeat;
 }
 
