--- a/src/main/resources/templates/admin/admin_user.html
+++ b/src/main/resources/templates/admin/admin_user.html
@@ -60,8 +60,8 @@
             <option id="3" value="OB">OB</option>
             <option id="4" value="SCH">SCH</option>
           </select>
-          <input class="form-control border-0" type="search" style="width:44%; margin-right: 3%;" placeholder="userId를 입력해주세요.">
-          <button class="btn btn-outline-light" style="width: 83px;">Search</button>
+          <input id="search" class="form-control border-0" type="search" style="width:44%; margin-right: 3%;" placeholder="userId를 입력해주세요.">
+          <button class="btn btn-outline-light" style="width: 83px;" onclick="search()">Search</button>
         </div>
         <div class="d-flex align-items-center justify-content-between mb-4">
           <h6 class="mb-0">유저 관리</h6>
@@ -107,8 +107,14 @@
 <script th:src="@{/js/admin/main.js}"></script>
 <script th:src="@{/js/admin/admin_user.js}"></script>
 <script>
-  renderPagination(1, "ALL");
-
+  renderPagination(1, "ALL","ALL");
+  function search(){
+    let type = document.getElementById("categorySelect").value;
+    let id = document.getElementById("search").value;
+    let userType = (type === null ? "ALL" : type);
+    let userId = (id === null ? "id" : id);
+    renderPagination(1, userType,userId);
+  }
 </script>
 </body>
 
