--- a/src/main/resources/static/css/quiz/style.css
+++ b/src/main/resources/static/css/quiz/style.css
@@ -1,20 +1,17 @@
 
 /* Sidebar */
-.sidebar {
-    position: fixed;
-    width: 250px;
-    height: 700px;;
-    background: var(--secondary);
-    transition: 0.5s;
-}
-.sidebar-challenge{
-   width : 150px;
-}
+
 .content{
     max-width: 1680px;
-    position : fixed;
+    /*position : fixed;*/
+    margin: 0 auto;
     background: var(--dark);
+    background-image: url("../../images/login/star.jpg");
     transition: 0.5s;
+    display:flex;
+    justify-content: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .content .navbar .navbar-nav .nav-link.active {
     color: var(--primary);
@@ -25,7 +22,6 @@
 }
 .challenge{
     width : 1100px;
-    position : fixed;
     max-width: 1430px;
     display: flex;
     justify-content: center;
@@ -41,11 +37,36 @@
     flex-wrap: wrap;
 }
 .one-quiz-block {
+    background: var(--dark);
     flex-basis: calc(33.333% - 10px);
     width : 33%;
     height: 75px;/* Assuming a gap of 10px */
     margin: 5px; /* Half of the gap */
     border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-left : 0.5%;
+    padding-right: 0.5%;
+    padding-bottom : 7%;
+}
+
+.one-quiz-block .title {
+    font-size : 2em;
+}
+
+.one-quiz-block .score{
+    font-size : 1em;
+    align-self: flex-start;
+}
+.one-quiz-block .bottom-row {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.one-quiz-block .writer{
+    font-size : 1em;
+    align-self: flex-end;
 }
 
 @media (max-width: 1100px) {
@@ -82,11 +103,50 @@
 .content-in-challenge{
     display: flex;
     flex-direction: column;
-    height : 100%;
+
+
 }
 
 
 .writer{
 
     text-overflow : ellipsis;
+}
+
+.popupBoxTitle {
+    color : var(--primary);
+    font-family: "Font Awesome 5 Free";
+    margin-bottom: 10px;
+}
+
+#popup {
+    background-color:  var(--dark);
+    padding-left : 2%;
+    padding-right: 2%;
+    padding-top:0.5%;
+    padding-bottom : 0.5%;
+    margin-top: 20px;
+    border : red solid 1px;
+    overflow: auto;
+}
+
+.popupBoxContent{
+    margin-bottom: 5px;
+    color : white;
+    height : 8%;
+    background-color : #51566e;
+    overflow: auto;
+    padding-left : 8px;
+    display: flex;
+    align-items: center;
+}
+
+.flag-title{
+
+}
+.popupBoxContent.description  {
+    height : 20%;
+    overflow: auto;
+    display: block;
+    align-items: stretch;
 }
