--- a/src/main/resources/templates/quiz/quiz_main.html
+++ b/src/main/resources/templates/quiz/quiz_main.html
@@ -33,27 +33,28 @@
     <link th:href="@{/css/quiz/style.css}" rel="stylesheet">
 </head>
 
-<body style="height: auto">
+<body>
 <!-- Navbar -->
 <div class="layout-nav">
     <nav th:replace="nav :: nav"></nav>
 </div>
-<div class="content " style="height:100%">
-
-    <div style="display: flex; justify-content: center;width: 100%; height:100%">
+<div class="content">
+    <div class="layout-center-title">
+        <nav></nav>
+    </div>
         <div class="challenge  rounded px-4 py-0">
             <!--      style="width: 90%; height: 80%; margin-top: 6%;"-->
-            <div class="content-in-challenge">
+            <div class="content-in-challenge"  >
                 <!-- REVERSING -->
                 <h3 style="font-size: 1.5em;" class="category-title">REVERSING</h3>
                 <div class="category-container">
                     <div class="one-quiz-block" th:each="quiz:${REVERSING}" th:data-quiz-id="${quiz.quizId}"
                          onClick="showPopup(this.getAttribute('data-quiz-id'))">
                         <div class="title" th:text="${quiz.quizName}"></div>
-                        <div class="level" th:if="${quiz.level == 0}">Low</div>
-                        <div class="level" th:if="${quiz.level == 1}">Middle</div>
-                        <div class="level" th:if="${quiz.level == 2}">High</div>
-                        <div class="writer" th:text="${quiz.quizWriter.nickName}"></div>
+                        <div class="bottom-row">
+                            <div class="score" th:text="${quiz.score}">Score</div>
+                            <div class="writer" th:text="${quiz.quizWriter.nickName}"></div>
+                        </div>
                     </div>
                 </div>
                 <!-- PWN -->
@@ -62,10 +63,10 @@
                     <div class="one-quiz-block" th:each="quiz:${PWN}" th:data-quiz-id="${quiz.quizId}"
                          onClick="showPopup(this.getAttribute('data-quiz-id'))">
                         <div class="title" th:text="${quiz.quizName}"></div>
-                        <div class="level" th:if="${quiz.level == 0}">Low</div>
-                        <div class="level" th:if="${quiz.level == 1}">Middle</div>
-                        <div class="level" th:if="${quiz.level == 2}">High</div>
-                        <div class="writer" th:text="${quiz.quizWriter.nickName}"></div>
+                        <div class="bottom-row">
+                            <div class="score" th:text="${quiz.score}">Score</div>
+                            <div class="writer" th:text="${quiz.quizWriter.nickName}"></div>
+                        </div>
                     </div>
                 </div>
                 <!-- WEB -->
@@ -74,10 +75,10 @@
                     <div class="one-quiz-block" th:each="quiz:${WEB}" th:data-quiz-id="${quiz.quizId}"
                          onClick="showPopup(this.getAttribute('data-quiz-id'))">
                         <div class="title" th:text="${quiz.quizName}"></div>
-                        <div class="level" th:if="${quiz.level == 0}">Low</div>
-                        <div class="level" th:if="${quiz.level == 1}">Middle</div>
-                        <div class="level" th:if="${quiz.level == 2}">High</div>
-                        <div class="writer" th:text="${quiz.quizWriter.nickName}"></div>
+                        <div class="bottom-row">
+                            <div class="score" th:text="${quiz.score}">Score</div>
+                            <div class="writer" th:text="${quiz.quizWriter.nickName}"></div>
+                        </div>
                     </div>
                 </div>
                 <!-- FORENSICS -->
@@ -86,10 +87,10 @@
                     <div class="one-quiz-block" th:each="quiz:${FORENSICS}" th:data-quiz-id="${quiz.quizId}"
                          onClick="showPopup(this.getAttribute('data-quiz-id'))">
                         <div class="title" th:text="${quiz.quizName}"></div>
-                        <div class="level" th:if="${quiz.level == 0}">Low</div>
-                        <div class="level" th:if="${quiz.level == 1}">Middle</div>
-                        <div class="level" th:if="${quiz.level == 2}">High</div>
-                        <div class="writer" th:text="${quiz.quizWriter.nickName}"></div>
+                        <div class="bottom-row">
+                            <div class="score" th:text="${quiz.score}">Score</div>
+                            <div class="writer" th:text="${quiz.quizWriter.nickName}"></div>
+                        </div>
                     </div>
                 </div>
                 <!-- MISC -->
@@ -98,36 +99,34 @@
                     <div class="one-quiz-block" th:each="quiz:${MISC}" th:data-quiz-id="${quiz.quizId}"
                          onClick="showPopup(this.getAttribute('data-quiz-id'))">
                         <div class="title" th:text="${quiz.quizName}"></div>
-                        <div class="level" th:if="${quiz.level == 0}">Low</div>
-                        <div class="level" th:if="${quiz.level == 1}">Middle</div>
-                        <div class="level" th:if="${quiz.level == 2}">High</div>
-                        <div class="writer" th:text="${quiz.quizWriter.nickName}"></div>
+                        <div class="bottom-row">
+                            <div class="score" th:text="${quiz.score}">Score</div>
+                            <div class="writer" th:text="${quiz.quizWriter.nickName}"></div>
+                        </div>
                     </div>
-                </div>
-                <!-- Dimmed background -->
-                <div id="dimmed-bg"
-                     style="display: none; position: fixed;  width:100%; height:100%; top:0; left:0; background-color:black; opacity:0.7;"></div>
-
-                <!-- Popup window -->
-                <div id="popup"
-                     style="display:none;width:auto;height:auto;top:50%;left:50%;transform:translate(-50%, -50%);background-color:white;position:fixed;">
                 </div>
 
             </div>
         </div>
     </div>
 
-</div>
+<!-- Dimmed background -->
+<div id="dimmed-bg"
+     style="display: none; position: fixed;  width:100%; height:100%; top:0; left:0; background-color:black; opacity:0.7;"></div>
 
+<!-- Popup window -->
+<div id="popup"
+     style="display:none;width:50%;height:53%;top:50%;left:50%;transform:translate(-50%, -50%);position:fixed;">
+</div>
 <!-- JavaScript Libraries -->
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script th:src="@{/js/moment.min.js}"></script>
+<!--<script th:src="@{/js/moment.min.js}"></script>-->
 <script th:src="@{/js/moment-timezone.min.js}"></script>
 <script th:src="@{/js/tempusdominus-bootstrap-4.min.js}"></script>
 <script th:src="@{/js/quiz/quiz_list.js}"></script>
 <!-- Template Javascript -->
-<script th:src="@{/js/admin/main.js}"></script>
+<!--<script th:src="@{/js/admin/main.js}"></script>-->
 </body>
 
 </html>
