--- a/src/main/resources/static/css/quiz/style.css
+++ b/src/main/resources/static/css/quiz/style.css
@@ -2,6 +2,8 @@
 /* Sidebar */
 
 .content{
+    flex-direction: column;
+    align-items: center;
     max-width: 1680px;
     /*position : fixed;*/
     margin: 0 auto;
