--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -21,7 +21,7 @@
                 </a>
             </div>
             <div class="nav-item">
-                <a href="#" class="nav-link main-link">
+                <a href="/score" class="nav-link main-link">
                     <i class="fa-solid fa-chart-simple me-lg-2"></i>
                     <span class="d-none d-lg-inline-flex">ScoreBoard</span>
                 </a>
