--- a/src/main/resources/templates/quiz/quiz_main.html
+++ b/src/main/resources/templates/quiz/quiz_main.html
@@ -31,6 +31,7 @@
     <!-- Basic Stylesheet -->
     <link th:href="@{/css/common.css}" rel="stylesheet">
     <link th:href="@{/css/quiz/style.css}" rel="stylesheet">
+
 </head>
 
 <body>
@@ -40,7 +41,7 @@
 </div>
 <div class="content">
     <div class="layout-center-title">
-        <nav></nav>
+        <div class="center-title"th:replace="centerTitle :: div"></div>
     </div>
         <div class="challenge  rounded px-4 py-0">
             <!--      style="width: 90%; height: 80%; margin-top: 6%;"-->
