--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -9,7 +9,7 @@
     <div class="navbar-nav" style="display: flex; justify-content: space-between; width: 100%;" >
         <div class="start-item">
             <div class="nav-item">
-                <a href="#" class="nav-link main-link">
+                <a href="/rule" class="nav-link main-link">
                     <i class="fa fa-bell me-lg-2"></i>
                     <span class="d-none d-lg-inline-flex">Rules</span>
                 </a>
