--- a/src/main/resources/static/css/score/style.css
+++ b/src/main/resources/static/css/score/style.css
@@ -3,5 +3,5 @@
     align-items: center;
     display:flex;
     justify-content: center;
-    background-image: url("../../images/login/star.jpg");
+    background-image: url("../../images/login/space.jpg");
 }
