--- a/src/main/resources/templates/score/score.html
+++ b/src/main/resources/templates/score/score.html
@@ -46,7 +46,7 @@
     </div>
     <div class="container-fluid pt-4 px-4">
         <div class="g-4" style="display: flex; justify-content: center;">
-            <div class="col-xl-6" style="width: 100%; display: flex; justify-content: center;">
+            <div class="col-xl-6" style="margin-bottom:10%; width: 100%; display: flex; justify-content: center;">
                 <div class="bg-secondary rounded p-4" style="height: auto; width: 760px;">
                     <div style="display: flex; height: 30.55px;" class="mb-2">
                         <div style="width: 75%; height: 80%; display: flex; justify-content: start;">
