--- a/src/main/resources/templates/score/score.html
+++ b/src/main/resources/templates/score/score.html
@@ -47,7 +47,7 @@
     <div class="container-fluid pt-4 px-4">
         <div class="g-4" style="display: flex; justify-content: center;">
             <div class="col-xl-6" style="margin-bottom:10%; width: 100%; display: flex; justify-content: center;">
-                <div class="bg-secondary rounded p-4" style="height: auto; width: 760px;">
+                <div class="bg-secondary rounded p-4" style="height: auto; width: 1000px;">
                     <div style="display: flex; height: 30.55px;" class="mb-2">
                         <div style="width: 75%; height: 80%; display: flex; justify-content: start;">
                             <h6 style="font-size: 1.2rem">TOP 5 Ranking</h6>
@@ -59,7 +59,7 @@
                             <label  style="font-size: small; padding: 2px 0 2px 0;" class="btn btn-outline-primary" for="NB">NB</label>
                         </div>
                     </div>
-                    <div id="chartContainer" style="margin-bottom: 10%" >
+                    <div id="chartContainer" style="margin-bottom: 5%;" >
                         <canvas id="rank-chart"></canvas>
                     </div>
                     <div id="scoreContainer" >
