--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -53,7 +53,7 @@
                 </a>
             </div>
             <div th:if="${type != null}" class="nav-item">
-                <a href="/myPage" class="nav-link main-link">
+                <a href="/myPage/profile" class="nav-link main-link">
                     <i class="fa-solid fa-user me-lg-2"></i>
                     <span class="d-none d-lg-inline-flex">Mypage</span>
                 </a>
