--- a/src/main/resources/templates/rule.html
+++ b/src/main/resources/templates/rule.html
@@ -50,7 +50,8 @@
     <div class="container">
         <div class="card mb-4 bg-secondary">
             <div class="card-body">
-                <div class="card-title card-font">대회 규칙<br>
+                <div class="card-title card-font">
+                    <div style="font-size: 1.25rem; font-weight: 600">대회 규칙</div>
                     - 본 대회의 시상은 정보보호학과 SecurityFirst 회원으로 제한됩니다.<br>
                     - 개인전이므로 문제에 대한 정답, 풀이방법, 힌트 공유, 문제에 대한 정보 공유 등은 금지됩니다.<br>
                     - 모든 플래그는 SF{~} 형식으로 되어있으며, 문제를 정상적으로 풀이하여 성공하면 플래그를 얻을 수 있습니다.<br>
