--- a/src/main/resources/templates/admin/admin_main.html
+++ b/src/main/resources/templates/admin/admin_main.html
@@ -125,6 +125,7 @@
 
 <!-- Template Javascript -->
 <script th:src="@{/js/admin/main.js}"></script>
+<script th:src="@{/js/admin/button.js}"></script>
 <script th:src="@{/js/admin/server_time.js}"></script>
 </body>
 
