--- a/src/main/resources/templates/admin/layout/admin_side.html
+++ b/src/main/resources/templates/admin/layout/admin_side.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <nav class="navbar bg-secondary navbar-dark">
-  <a href="index.html" class="navbar-brand mx-4 mb-3">
+  <a href="/" class="navbar-brand mx-4 mb-3">
     <h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>AdminPage</h3>
   </a>
   <div class="navbar-nav w-100">
